--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
 		</div>
 
 		<div style="margin-top: 40px; min-height: auto; height: 300px;">
-			<img src="pictures/memes/neet.png" style="max-height: 100%; margin-right: 20px;float: left" />
+			<img src="images/neet.png" style="max-height: 100%; margin-right: 20px;float: left" />
 		<div style="margin-right: 20px; text-align: center; padding-top: 10px;">
 		<h2>Hey! Welcome to my website.</h2>
-		<p>This is my personnal webpage where you can learn about me and my interests. You can also do business with me by checking out my <a href="https://www.ebay.ca/usr/j-faub"><img src="pictures/icons/ebayext.png" style="max-height: 22px;"></a> page or by <a href="#link">contacting me.</a></p>
+		<p>This is my personnal webpage where you can learn about me and my interests. You can also do business with me by checking out my <a href="https://www.ebay.ca/usr/j-faub"><img src="images/ebayext.png" style="max-height: 22px;"></a> page or by <a href="#link">contacting me.</a></p>
 		</div>
 		</div>
 
 		<div style="margin-top: 40px; min-height: auto; height: 300px;">
-			<img src="pictures/memes/stop2.jpg" style="max-height: 100%; margin-left: 20px;float: right" />
+			<img src="images/stop2.jpg" style="max-height: 100%; margin-left: 20px;float: right" />
 		<div style="margin-right: 20px; text-align: center; padding-top: 10px;">
 		<h2>I just want to get something straight!</h2>
 		<p>If you are any kind of degenerate (i.e. coomer, doomer, consoomer, etc), then you are not welcomed here and should leave this site immediatly (or else you might just get your feelings hurt 😉).</p>
