--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<a href="index.html">Linux</a>
 		<a href="https://www.ebay.ca/usr/j-faub">eBay</a>
 		<a href="index.html">Articles</a>
-		<a href="index.html">Donate</a>
+		<a href="donate.html">Donate</a>
 		</div>
 
 		<div style="margin-top: 40px; min-height: auto; height: 300px;">
