--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
 	<body>
 		<h1>John Faubert's Webpage</h1>
 		<div id="selectbar">
-		<a href="index.html">Home</a>
-		<a href="index.html">Videos</a>
-		<a href="index.html">Religion</a>
-		<a href="index.html">Linux</a>
-		<a href="https://www.ebay.ca/usr/j-faub">eBay</a>
-		<a href="index.html">Articles</a>
-		<a href="donate.html">Donate</a>
+		<a id="link" href="index.html">Home</a>
+		<a id="link" href="index.html">Videos</a>
+		<a id="link" href="index.html">Religion</a>
+		<a id="link" href="index.html">Linux</a>
+		<a id="link" href="index.html">AOLC</a>
+		<a id="link" href="https://www.ebay.ca/usr/j-faub">eBay</a>
+		<a id="link" href="index.html">Articles</a>
+		<a id="link" href="donate.html">Donate</a>
 		</div>
 
 		<div style="margin-top: 40px; min-height: auto; height: 300px;">
@@ -30,6 +31,7 @@
 		<div style="margin-right: 20px; text-align: center; padding-top: 10px;">
 		<h2>I just want to get something straight!</h2>
 		<p>If you are any kind of degenerate (i.e. coomer, doomer, consoomer, etc), then you are not welcomed here and should leave this site immediatly (or else you might just get your feelings hurt 😉).</p>
+
 		</div>
 
 		</div>
@@ -43,5 +45,6 @@
 				<li>YouTube: <em><a href="https://www.youtube.com/channel/UC9BisZLYVfw-oUq8GUlUObw?view_as=subscriber">Click here!</a></em></li>
 			</ul>
 		</div>
+		<div style="text-align: center"><img style="height:200px;" src="images/animeeyes.gif"></div>
 	</body>
 </html>
