--- a/donate.html
+++ b/donate.html
@@ -6,7 +6,7 @@
 		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
-		<h1>If you want to support me, donate through one of the following options (you can also go back to the <a href="index.html">home page</a>):</h1>
+		<h1>If you want to support me, donate through one of the following options (you can also go back to the <a id="link" href="index.html">home page</a>):</h1>
 		<div style="text-align:center; margin-bottom: -70px; margin-top: -20px;"><img src="images/coin.gif"></div>
 		<ul style="color:white; font-size: large">
 			<li>Paypal: <form style="margin-top: 10px; margin-bottom: 10px;" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
@@ -17,9 +17,9 @@
 					<img alt="" border="0" src="https://www.paypal.com/en_CA/i/scr/pixel.gif" width="1" height="1" />
 				</form>
 			</li>
-			<li><img src="images/patreon.svg" style="max-height: 18px"> <a href="index.html">Patreon</a></li>
-			<li><img src="images/bitcoin.svg" style="max-height: 18px"> BitCoin: 12CDYcTSU4VoEpewehFGDmYc78QtwBK2HD</li>
-			<li>Or simply buy something on my <a href="https://www.ebay.ca/usr/j-faub">eBay!</a></li>
+			<li><img src="images/patreon.svg" style="max-height: 18px"> <a id="link" href="index.html">Patreon</a></li>
+			<li><img src="images/bitcoin.svg" style="max-height: 18px"> BitCoin: <em>12CDYcTSU4VoEpewehFGDmYc78QtwBK2HD</em></li>
+			<li>Or simply buy something on my <a id="link" href="https://www.ebay.ca/usr/j-faub">eBay!</a></li>
 		</ul>
 		<div style="text-align:center"><img src="images/thankyou.gif"><figcaption style="color: white">Thank you for your support, it is greatly appreciated!</figcaption></div>
 
