--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 		<div id="selectbar">
 		<a id="link" href="index.html">Home</a>
 		<a id="link" href="index.html">Videos</a>
-		<a id="link" href="index.html">Religion</a>
-		<a id="link" href="index.html">Linux</a>
+		<a id="link" href="spirituality.html">Spirituality</a>
+		<a id="link" href="linux.html">Linux</a>
 		<a id="link" href="index.html">AOLC</a>
 		<a id="link" href="https://www.ebay.ca/usr/j-faub">eBay</a>
 		<a id="link" href="index.html">Articles</a>
@@ -26,8 +26,10 @@
 		</div>
 		</div>
 
+		<img style="width:100%;margin-bottom: -20px;margin-top: 20px;" src="images/IMG_1985.GIF">
 		<div style="margin-top: 40px; min-height: auto; height: 300px;">
 			<img src="images/stop2.jpg" style="max-height: 100%; margin-left: 20px;float: right" />
+			
 		<div style="margin-right: 20px; text-align: center; padding-top: 10px;">
 		<h2>I just want to get something straight!</h2>
 		<p>If you are any kind of degenerate (i.e. coomer, doomer, consoomer, etc), then you are not welcomed here and should leave this site immediatly (or else you might just get your feelings hurt 😉).</p>
@@ -35,7 +37,7 @@
 		</div>
 
 		</div>
-
+		<img style="width:100%;margin-bottom: -0px;margin-top: 20px;" src="images/IMG_1985.GIF">
 		<div>
 			<h2 id="link">Links and contact info:</h2>
 			<ul style="color:white">
@@ -48,3 +50,7 @@
 		<div style="text-align: center"><img style="height:200px;" src="images/animeeyes.gif"></div>
 	</body>
 </html>
+
+
+<img src="images/thinking.webp" style="position: fixed; top:0;left:0">
+<img src="images/thinking.webp" style="position: fixed; top:0;right:0">
