--- a/donate.html
+++ b/donate.html
@@ -6,6 +6,18 @@
 		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
+		<h1>John Faubert's Webpage</h1>
+		<div id="selectbar">
+		<a id="link" href="index.html">Home</a>
+		<a id="link" href="index.html">Videos</a>
+		<a id="link" href="spirituality.html">Spirituality</a>
+		<a id="link" href="linux.html">Linux</a>
+		<a id="link" href="index.html">AOLC</a>
+		<a id="link" href="https://www.ebay.ca/usr/j-faub">eBay</a>
+		<a id="link" href="index.html">Articles</a>
+		<a id="link" href="donate.html">Donate</a>
+		</div>
+
 		<h1>If you want to support me, donate through one of the following options (you can also go back to the <a id="link" href="index.html">home page</a>):</h1>
 		<div style="text-align:center; margin-bottom: -70px; margin-top: -20px;"><img src="images/coin.gif"></div>
 		<ul style="color:white; font-size: large">
@@ -22,6 +34,8 @@
 			<li>Or simply buy something on my <a id="link" href="https://www.ebay.ca/usr/j-faub">eBay!</a></li>
 		</ul>
 		<div style="text-align:center"><img src="images/thankyou.gif"><figcaption style="color: white">Thank you for your support, it is greatly appreciated!</figcaption></div>
-
 	</body>
 </html>
+
+<img src="images/thinking.webp" style="position: fixed; top:0;left:0">
+<img src="images/thinking.webp" style="position: fixed; top:0;right:0">
